--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
